# learning-plan

./: .gitignore  ACCEPTANCE_REPORT.md  CODE_EXTRACTION_REPORT.md  COMPLETION_SUMMARY.md  FINAL_QUALITY_CHECK.md  JS_TS_DEEP_DIVE_PLAN.md  MODERN_FRONTEND_PLAN.md  PROGRESS.md  QUICK_START.md  README.md  TEMPLATE.md  exercises-summary.md  getting-started.md  index.md  learning-guide.md  package-lock.json  package.json  project-reports.md  resources.md
.github/workflows/: deploy.yml
.vitepress/: config.mts
.vitepress/theme/: custom.css  index.ts
python/: PYTHON_LEARNING_PLAN.md  README.md
python/stage-1-beginner/: README.md
python/stage-2-intermediate/: README.md
python/stage-2-intermediate/07-modules-packages/examples/03-pyproject-example/: pyproject.toml
python/stage-3-advanced/: README.md  _gen_all.py  _gen_ch02.py  _generate.py  _writer.py
python/stage-4-expert/: README.md
python/stage-5-philosophy/: README.md
resources/: best-practices.md  coding-standards.md  external-resources.md
scripts/: audit-docs.mjs  create-readme-redirects.mjs
stage-1-beginner/: README.md
stage-1-beginner/01-javascript-basics/: README.md
stage-1-beginner/02-functions-scope/: README.md
stage-1-beginner/exercises/: README.md
stage-2-intermediate/: CODE_EXAMPLES_SUMMARY.md  README.md
stage-3-advanced/: README.md
stage-4-expert/: README.md
stage-5-philosophy/: README.md
stage-modern-frontend/: CODE_EXAMPLES_INDEX.md  CODE_EXTRACTION_REPORT.md  EXAMPLES_INDEX.md  README.md
teaching-support/: assessment-tools.md  debugging-guide.md  faq.md  teacher-guide.md
(+684 files in other folders)
